[package]
name = "opsgenie-rs"
version = "0.1.0-alpha1"
authors = ["Vlad Vasiliu"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "2.2"
chrono = { version = "0.4", features = ["serde"]}
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", features = ["json"] }
